--- a/starter/07-Omnifood-Desktop/assets/css/style.css
+++ b/starter/07-Omnifood-Desktop/assets/css/style.css
@@ -334,16 +334,21 @@
 /* ****************************** */
 
 .section-testimonials {
-	padding: 9.6rem 0;
+	background-color: var(--tint-main-color);
+	display: grid;
+	grid-template-columns: 55fr 45fr;
+	align-items: center;
+}
+
+.testimonials-container {
+	padding: 9.6rem;
 }
 
 .testimonials {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	gap: 4.8rem;
-}
-
-.testimonial {
+	row-gap: 4.8rem;
+	column-gap: 8rem;
 }
 
 .testimonial-img {
@@ -361,4 +366,29 @@
 .testimonial-name {
 	font-size: 1.6rem;
 	color: var(--main-md-light-grey);
+}
+
+/* ----------Gallery */
+
+.gallery {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 1.6rem;
+	padding: 1.6rem;
+}
+
+.gallery-item {
+	overflow: hidden;
+}
+
+/* Need to set up image to block for delete whitespace between images, what they have by default when they are inline elements */
+.gallery-item img {
+	display: block;
+	width: 100%;
+	transition: all 0.4s;
+}
+
+.gallery-item img:hover {
+	/* transform: rotate(45deg); */
+	transform: scale(1.1);
 }
